Feeds: initial version
FossilOrigin-Name: 02fe89f44d214dc3500a316e3ebc4396c4d82d30f73c4e90b7221ee23cee3570

--- a/www/index.wiki
+++ b/www/index.wiki
@@ -5,6 +5,7 @@ This repository contains contributed software and test data for
 Some may move into their own repository, when proved useful.
 
 <h2>Software</h2>
+  *  [/dir?ci=tip&name=feeds|Zettel Feeds]: build web feeds for running Zettelstore instances.
   *  [/dir?ci=tip&name=presenter|Zettel Presenter]: create a web-based presentation from some zettel.
 
 <h2>Test data</h2>
